@@ -1,3 +1,12 @@
+2007-06-13  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* Change: src/kahua/config.scm.in, src/kahua-keyserv.scm,
+	          src/kahua-spvr.scm, src/kahua-httpd.scm
+	  Now kahua-keyserv, kahua-spvr, kahua-httpd support -t(--threads)
+	  option that has a argument as size of thread pool, and
+	  add :keyserv-concurrency and :httpd-concurrency to config file
+	  as well as :spvr-concurrency.
+
 2007-06-07  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* Fix: src/kahua/persistence.scm
